# xbmc

./: .gitignore  .travis.yml  CMakeLists.txt  Makefile.in  Makefile.include.in  README.md  codegenerator.mk  configure.ac  configure.in  version.txt
Kodi.xcodeproj/: project.pbxproj
XBMC.xcodeproj/: project.pbxproj
addons/resource.language.en_gb/resources/: strings.po
addons/skin.confluence/720p/: PlayerControls.xml  VideoFullScreen.xml
cmake/addons/: CMakeLists.txt
cmake/cpack/: CPackConfigDEB.cmake
cmake/depends/: CMakeLists.txt
cmake/depends/native/: CMakeLists.txt  config.site.native.in
cmake/depends/native/native-depends/common/autoconf/: CMakeLists.txt  autoconf.txt
cmake/depends/native/native-depends/common/automake/: CMakeLists.txt  automake.sha256  automake.txt
cmake/depends/native/native-depends/common/gettext/: CMakeLists.txt  gettext.sha256  gettext.txt
cmake/depends/native/native-depends/common/m4/: CMakeLists.txt  m4.sha256  m4.txt
cmake/depends/target_devices/: arm-android-generic
cmake/modules/: FindCdio.cmake  FindFlatBuffers.cmake  FindIso9660pp.cmake  FindMariaDBClient.cmake
cmake/platform/linux/: x11.cmake
cmake/scripts/common/: AddonHelpers.cmake  DownloadDepends.cmake  GenerateVersionedFiles.cmake  HandleDepends.cmake  Macros.cmake  PrepareEnv.cmake
cmake/scripts/linux/: ArchSetup.cmake  Install.cmake
debian/: changelog  changelog.tmp  changelog.tmp.old  control  control.in  kodi-gbm.install  kodi-wayland.install  kodi-x11.install  rules
debian/source/: options
docs/: README.linux  README.osx  README.ubuntu
language/English/: strings.po
lib/: DllAvCodec.h  DllAvFormat.h  DllAvUtil.h  DllPostProc.h  DllSwResample.h  ffmpeg.h
lib/addons/library.kodi.audioengine/: libKODI_audioengine.cpp
lib/ffmpeg/: configure
lib/ffmpeg/libavcodec/: Makefile  allcodecs.c  h264.c  mpegvideo.c  xvba.c  xvba.h  xvba_h264.c  xvba_internal.h  xvba_mpeg2.c  xvba_vc1.c
lib/ffmpeg/libavutil/: pixdesc.c  pixfmt.h
lib/xbmc-dll-symbols/: DllAvFormat.c
project/BuildDependencies/: DownloadBuildDeps.bat  DownloadMingwBuildEnv.bat
project/BuildDependencies/downloads/: flatbuffers-1.9.0.7z  flatc-1.9.0-win32.7z
project/BuildDependencies/scripts/: 0_package.native-win32.list  0_package.target-win10-arm.list  0_package.target-win10-win32.list  0_package.target-win10-x64.list  0_package.target-win32.list  0_package.target-x64.list  dlextract.bat  get_formed.cmd
project/VS2010Express/: XBMC.vcxproj  XBMC.vcxproj.filters
project/cmake/: CMakeLists.txt  kodi-config.cmake.in  xbmc-addon-helpers.cmake  xbmc-config.cmake.in
project/cmake/addons/: CMakeLists.txt  README
project/cmake/modules/: FindCpluff.cmake  FindCrossGUID.cmake  FindCurl.cmake  FindFFMPEG.cmake  FindLibDvd.cmake  FindMicroHttpd.cmake  FindMySqlClient.cmake  FindPython.cmake  FindSdl.cmake
project/cmake/scripts/: Macros.cmake
snap/: snapcraft.yaml
system/keymaps/: joystick.Microsoft.Xbox.360.Controller.xml  joystick.Sony.PLAYSTATION(R)3.Controller.xml
system/settings/: settings.xml
tools/Linux/: FEH.py  gbm-set-color-rage.sh  kodi.sh.in  xbmc.sh.in
tools/android/packaging/: Makefile.in
tools/buildsteps/win32/: make-mingwlibs.bat
tools/darwin/Configurations/: App-iOS.xcconfig  App.xcconfig.in
tools/darwin/Support/: copyframeworks-ios.command
tools/darwin/packaging/: migrate_to_kodi_ios.sh.in
tools/darwin/runtime/: preflight  preflight.in
tools/depends/: Makefile.include.in  MakefileUtils.include  configure.ac  configure.in  xbmc-addons.include
tools/windows/: JsonSchemaBuilder.bat
xbmc/: Application.cpp  Application.h  ApplicationPlayer.cpp  ApplicationPlayer.h  Autorun.cpp  DatabaseManager.cpp  FileItem.cpp  FileItem.h  GUIInfoManager.cpp  GitRevision.cpp  ServiceBroker.cpp  ServiceBroker.h  ServiceManager.cpp  ServiceManager.h  Util.cpp  system.h
xbmc/addons/: AddonCallbacksAudioEngine.cpp  AddonCallbacksCodec.cpp  AddonInstaller.cpp  AddonManager.cpp  AddonManager.h  CMakeLists.txt  GUIWindowAddonBrowser.cpp  Repository.cpp  Visualisation.cpp  addon-bindings.mk
xbmc/addons/binary-addons/: AddonDll.cpp
xbmc/addons/include/: xbmc_audioenc_types.h
xbmc/android/activity/: XBMCApp.cpp  XBMCApp.h
xbmc/cdrip/: EncoderFFmpeg.cpp  EncoderFFmpeg.h  EncoderWav.cpp  Makefile.in  TranscodeJob.cpp  TranscodeJob.h
xbmc/cores/: CMakeLists.txt  IPlayer.h
xbmc/cores/AudioEngine/: AEAudioFormat.h  CMakeLists.txt
xbmc/cores/ExternalPlayer/: ExternalPlayer.cpp
xbmc/cores/RetroPlayer/: CMakeLists.txt  RetroPlayer.cpp  (+3 more)
xbmc/dbwrappers/: mysqldataset.cpp  mysqldataset.h
xbmc/dialogs/: GUIDialogContextMenu.h
xbmc/filesystem/: CurlFile.cpp  CurlFile.h  DAAPFile.cpp  Makefile.in  RTVDirectory.cpp  RarDirectory.cpp  SFTP.h  SFTPDirectory.cpp  SFTPFile.cpp  SFTPFile.h  SFTPSession.cpp  SFTPSession.h  SFTPSessionManager.cpp  SFTPSessionManager.h  SMBDirectory.cpp  SlingboxFile.cpp  UDFBlockInput.cpp
xbmc/guiinfo/: GUIInfoLabels.h
xbmc/guilib/: CMakeLists.txt  GUIStaticItem.h  GUIVideoControl.cpp  GUIWindowManager.cpp  GraphicContext.h  JpegIO.cpp  Shader.cpp  Shader.h
xbmc/input/: ButtonTranslator.cpp  ButtonTranslator.h  CMakeLists.txt  XBMC_keytable.cpp
xbmc/linux/: CMakeLists.txt  RBP.cpp
xbmc/network/: AirTunesServer.cpp  WebServer.cpp  cddb.cpp
xbmc/osx/: DarwinUtils.h  DarwinUtils.mm  IOSEAGLView.mm  IOSScreenManager.mm
xbmc/pictures/: Picture.cpp
xbmc/powermanagement/: PowerManager.cpp
xbmc/settings/: AdvancedSettings.cpp  AdvancedSettings.h  GUISettings.cpp  GUIWindowSettingsCategory.cpp  GUIWindowSettingsCategory.h  SettingConditions.cpp  Settings.cpp  Settings.h  VideoSettings.h
xbmc/utils/: ActorProtocol.cpp  ActorProtocol.h  BitstreamConverter.h  CMakeLists.txt  CPUInfo.cpp  FileUtils.cpp  LabelFormatter.cpp  Makefile  URIUtils.cpp
xbmc/video/: FFmpegVideoDecoder.cpp  FFmpegVideoDecoder.h  Teletext.cpp  VideoInfoScanner.cpp  VideoReferenceClock.cpp  VideoReferenceClock.h  VideoThumbLoader.cpp
xbmc/view/: GUIViewState.cpp
xbmc/windowing/: CMakeLists.txt  WinEventsSDL.h  WinEventsX11.cpp  WinSystem.cpp  WinSystem.h
(+307 files in other folders)
